--- a/css/histrip.css
+++ b/css/histrip.css
@@ -68,7 +68,8 @@ body {
 
 .person-inner{
   width: 90%;
-  height: 100%;
+  /*height: 100%;*/
+  height: 100vh;
   margin-left: 5%;
   background: #fff;
   border-radius: 10px;
@@ -85,5 +86,5 @@ body {
 }
 
 .person img{
-  height: 100%;
+  /*height: 100%;*/
 }
