--- a/css/histrip.css
+++ b/css/histrip.css
@@ -69,7 +69,8 @@ body {
 .person-inner{
   width: 90%;
   /*height: 100%;*/
-  height: 100vh;
+  /*height: 100vh;*/
+  height: 400px;
   margin-left: 5%;
   background: #fff;
   border-radius: 10px;
